parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMENTARIO_BLOQUE
    COMENTARIO_LINEA

Grammar

Rule 0     S' -> programa
Rule 1     programa -> automata_def
Rule 2     programa -> programa automata_def
Rule 3     automata_def -> AUTOMATON IDENTIFICADOR LLAVE_A definicion_automa LLAVE_C
Rule 4     definicion_automa -> propiedades transiciones_def
Rule 5     propiedades -> propiedad
Rule 6     propiedades -> propiedades propiedad
Rule 7     propiedad -> type_def
Rule 8     propiedad -> alphabet_def
Rule 9     propiedad -> states_def
Rule 10    propiedad -> initial_def
Rule 11    propiedad -> accept_def
Rule 12    propiedad -> stack_alphabet_def
Rule 13    propiedad -> stack_start_def
Rule 14    propiedad -> tape_alphabet_def
Rule 15    propiedad -> blank_def
Rule 16    type_def -> TYPE ASIGNACION tipo_automa PUNTOCOMA
Rule 17    tipo_automa -> DFA
Rule 18    tipo_automa -> NFA
Rule 19    tipo_automa -> PDA
Rule 20    tipo_automa -> TM
Rule 21    alphabet_def -> ALPHABET ASIGNACION conjunto_simbolos PUNTOCOMA
Rule 22    states_def -> STATES ASIGNACION conjunto_ids PUNTOCOMA
Rule 23    initial_def -> INITIAL ASIGNACION IDENTIFICADOR PUNTOCOMA
Rule 24    accept_def -> ACCEPT ASIGNACION conjunto_ids PUNTOCOMA
Rule 25    stack_alphabet_def -> STACK_ALPHABET ASIGNACION conjunto_simbolos PUNTOCOMA
Rule 26    stack_start_def -> STACK_START ASIGNACION SIMBOLO PUNTOCOMA
Rule 27    stack_start_def -> STACK_START ASIGNACION IDENTIFICADOR PUNTOCOMA
Rule 28    tape_alphabet_def -> TAPE_ALPHABET ASIGNACION conjunto_simbolos PUNTOCOMA
Rule 29    blank_def -> BLANK ASIGNACION SIMBOLO PUNTOCOMA
Rule 30    blank_def -> BLANK ASIGNACION IDENTIFICADOR PUNTOCOMA
Rule 31    transiciones_def -> TRANSITIONS LLAVE_A lista_transiciones LLAVE_C
Rule 32    lista_transiciones -> transicion_def
Rule 33    lista_transiciones -> lista_transiciones transicion_def
Rule 34    transicion_def -> IDENTIFICADOR TRANSICION IDENTIFICADOR CORCHETE_A atributos CORCHETE_B PUNTOCOMA
Rule 35    atributos -> atributo
Rule 36    atributos -> atributos COMA atributo
Rule 37    atributo -> IDENTIFICADOR ASIGNACION valor
Rule 38    atributo -> INPUT ASIGNACION valor
Rule 39    atributo -> READ ASIGNACION valor
Rule 40    atributo -> WRITE ASIGNACION valor
Rule 41    atributo -> MOVE ASIGNACION valor
Rule 42    atributo -> POP ASIGNACION valor
Rule 43    atributo -> PUSH ASIGNACION valor
Rule 44    valor -> SIMBOLO
Rule 45    valor -> EPSILON
Rule 46    valor -> IDENTIFICADOR
Rule 47    valor -> LEFT
Rule 48    valor -> RIGHT
Rule 49    valor -> STAY
Rule 50    conjunto_simbolos -> LLAVE_A elementos_conjunto LLAVE_C
Rule 51    conjunto_ids -> LLAVE_A elementos_conjunto LLAVE_C
Rule 52    elementos_conjunto -> elemento
Rule 53    elementos_conjunto -> elementos_conjunto COMA elemento
Rule 54    elemento -> SIMBOLO
Rule 55    elemento -> IDENTIFICADOR

Terminals, with rules where they appear

ACCEPT               : 24
ALPHABET             : 21
ASIGNACION           : 16 21 22 23 24 25 26 27 28 29 30 37 38 39 40 41 42 43
AUTOMATON            : 3
BLANK                : 29 30
COMA                 : 36 53
COMENTARIO_BLOQUE    : 
COMENTARIO_LINEA     : 
CORCHETE_A           : 34
CORCHETE_B           : 34
DFA                  : 17
EPSILON              : 45
IDENTIFICADOR        : 3 23 27 30 34 34 37 46 55
INITIAL              : 23
INPUT                : 38
LEFT                 : 47
LLAVE_A              : 3 31 50 51
LLAVE_C              : 3 31 50 51
MOVE                 : 41
NFA                  : 18
PDA                  : 19
POP                  : 42
PUNTOCOMA            : 16 21 22 23 24 25 26 27 28 29 30 34
PUSH                 : 43
READ                 : 39
RIGHT                : 48
SIMBOLO              : 26 29 44 54
STACK_ALPHABET       : 25
STACK_START          : 26 27
STATES               : 22
STAY                 : 49
TAPE_ALPHABET        : 28
TM                   : 20
TRANSICION           : 34
TRANSITIONS          : 31
TYPE                 : 16
WRITE                : 40
error                : 

Nonterminals, with rules where they appear

accept_def           : 11
alphabet_def         : 8
atributo             : 35 36
atributos            : 34 36
automata_def         : 1 2
blank_def            : 15
conjunto_ids         : 22 24
conjunto_simbolos    : 21 25 28
definicion_automa    : 3
elemento             : 52 53
elementos_conjunto   : 50 51 53
initial_def          : 10
lista_transiciones   : 31 33
programa             : 2 0
propiedad            : 5 6
propiedades          : 4 6
stack_alphabet_def   : 12
stack_start_def      : 13
states_def           : 9
tape_alphabet_def    : 14
tipo_automa          : 16
transicion_def       : 32 33
transiciones_def     : 4
type_def             : 7
valor                : 37 38 39 40 41 42 43

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . automata_def
    (2) programa -> . programa automata_def
    (3) automata_def -> . AUTOMATON IDENTIFICADOR LLAVE_A definicion_automa LLAVE_C

    AUTOMATON       shift and go to state 3

    programa                       shift and go to state 1
    automata_def                   shift and go to state 2

state 1

    (0) S' -> programa .
    (2) programa -> programa . automata_def
    (3) automata_def -> . AUTOMATON IDENTIFICADOR LLAVE_A definicion_automa LLAVE_C

    AUTOMATON       shift and go to state 3

    automata_def                   shift and go to state 4

state 2

    (1) programa -> automata_def .

    AUTOMATON       reduce using rule 1 (programa -> automata_def .)
    $end            reduce using rule 1 (programa -> automata_def .)


state 3

    (3) automata_def -> AUTOMATON . IDENTIFICADOR LLAVE_A definicion_automa LLAVE_C

    IDENTIFICADOR   shift and go to state 5


state 4

    (2) programa -> programa automata_def .

    AUTOMATON       reduce using rule 2 (programa -> programa automata_def .)
    $end            reduce using rule 2 (programa -> programa automata_def .)


state 5

    (3) automata_def -> AUTOMATON IDENTIFICADOR . LLAVE_A definicion_automa LLAVE_C

    LLAVE_A         shift and go to state 6


state 6

    (3) automata_def -> AUTOMATON IDENTIFICADOR LLAVE_A . definicion_automa LLAVE_C
    (4) definicion_automa -> . propiedades transiciones_def
    (5) propiedades -> . propiedad
    (6) propiedades -> . propiedades propiedad
    (7) propiedad -> . type_def
    (8) propiedad -> . alphabet_def
    (9) propiedad -> . states_def
    (10) propiedad -> . initial_def
    (11) propiedad -> . accept_def
    (12) propiedad -> . stack_alphabet_def
    (13) propiedad -> . stack_start_def
    (14) propiedad -> . tape_alphabet_def
    (15) propiedad -> . blank_def
    (16) type_def -> . TYPE ASIGNACION tipo_automa PUNTOCOMA
    (21) alphabet_def -> . ALPHABET ASIGNACION conjunto_simbolos PUNTOCOMA
    (22) states_def -> . STATES ASIGNACION conjunto_ids PUNTOCOMA
    (23) initial_def -> . INITIAL ASIGNACION IDENTIFICADOR PUNTOCOMA
    (24) accept_def -> . ACCEPT ASIGNACION conjunto_ids PUNTOCOMA
    (25) stack_alphabet_def -> . STACK_ALPHABET ASIGNACION conjunto_simbolos PUNTOCOMA
    (26) stack_start_def -> . STACK_START ASIGNACION SIMBOLO PUNTOCOMA
    (27) stack_start_def -> . STACK_START ASIGNACION IDENTIFICADOR PUNTOCOMA
    (28) tape_alphabet_def -> . TAPE_ALPHABET ASIGNACION conjunto_simbolos PUNTOCOMA
    (29) blank_def -> . BLANK ASIGNACION SIMBOLO PUNTOCOMA
    (30) blank_def -> . BLANK ASIGNACION IDENTIFICADOR PUNTOCOMA

    TYPE            shift and go to state 19
    ALPHABET        shift and go to state 20
    STATES          shift and go to state 21
    INITIAL         shift and go to state 22
    ACCEPT          shift and go to state 23
    STACK_ALPHABET  shift and go to state 24
    STACK_START     shift and go to state 25
    TAPE_ALPHABET   shift and go to state 26
    BLANK           shift and go to state 27

    definicion_automa              shift and go to state 7
    propiedades                    shift and go to state 8
    propiedad                      shift and go to state 9
    type_def                       shift and go to state 10
    alphabet_def                   shift and go to state 11
    states_def                     shift and go to state 12
    initial_def                    shift and go to state 13
    accept_def                     shift and go to state 14
    stack_alphabet_def             shift and go to state 15
    stack_start_def                shift and go to state 16
    tape_alphabet_def              shift and go to state 17
    blank_def                      shift and go to state 18

state 7

    (3) automata_def -> AUTOMATON IDENTIFICADOR LLAVE_A definicion_automa . LLAVE_C

    LLAVE_C         shift and go to state 28


state 8

    (4) definicion_automa -> propiedades . transiciones_def
    (6) propiedades -> propiedades . propiedad
    (31) transiciones_def -> . TRANSITIONS LLAVE_A lista_transiciones LLAVE_C
    (7) propiedad -> . type_def
    (8) propiedad -> . alphabet_def
    (9) propiedad -> . states_def
    (10) propiedad -> . initial_def
    (11) propiedad -> . accept_def
    (12) propiedad -> . stack_alphabet_def
    (13) propiedad -> . stack_start_def
    (14) propiedad -> . tape_alphabet_def
    (15) propiedad -> . blank_def
    (16) type_def -> . TYPE ASIGNACION tipo_automa PUNTOCOMA
    (21) alphabet_def -> . ALPHABET ASIGNACION conjunto_simbolos PUNTOCOMA
    (22) states_def -> . STATES ASIGNACION conjunto_ids PUNTOCOMA
    (23) initial_def -> . INITIAL ASIGNACION IDENTIFICADOR PUNTOCOMA
    (24) accept_def -> . ACCEPT ASIGNACION conjunto_ids PUNTOCOMA
    (25) stack_alphabet_def -> . STACK_ALPHABET ASIGNACION conjunto_simbolos PUNTOCOMA
    (26) stack_start_def -> . STACK_START ASIGNACION SIMBOLO PUNTOCOMA
    (27) stack_start_def -> . STACK_START ASIGNACION IDENTIFICADOR PUNTOCOMA
    (28) tape_alphabet_def -> . TAPE_ALPHABET ASIGNACION conjunto_simbolos PUNTOCOMA
    (29) blank_def -> . BLANK ASIGNACION SIMBOLO PUNTOCOMA
    (30) blank_def -> . BLANK ASIGNACION IDENTIFICADOR PUNTOCOMA

    TRANSITIONS     shift and go to state 31
    TYPE            shift and go to state 19
    ALPHABET        shift and go to state 20
    STATES          shift and go to state 21
    INITIAL         shift and go to state 22
    ACCEPT          shift and go to state 23
    STACK_ALPHABET  shift and go to state 24
    STACK_START     shift and go to state 25
    TAPE_ALPHABET   shift and go to state 26
    BLANK           shift and go to state 27

    transiciones_def               shift and go to state 29
    propiedad                      shift and go to state 30
    type_def                       shift and go to state 10
    alphabet_def                   shift and go to state 11
    states_def                     shift and go to state 12
    initial_def                    shift and go to state 13
    accept_def                     shift and go to state 14
    stack_alphabet_def             shift and go to state 15
    stack_start_def                shift and go to state 16
    tape_alphabet_def              shift and go to state 17
    blank_def                      shift and go to state 18

state 9

    (5) propiedades -> propiedad .

    TRANSITIONS     reduce using rule 5 (propiedades -> propiedad .)
    TYPE            reduce using rule 5 (propiedades -> propiedad .)
    ALPHABET        reduce using rule 5 (propiedades -> propiedad .)
    STATES          reduce using rule 5 (propiedades -> propiedad .)
    INITIAL         reduce using rule 5 (propiedades -> propiedad .)
    ACCEPT          reduce using rule 5 (propiedades -> propiedad .)
    STACK_ALPHABET  reduce using rule 5 (propiedades -> propiedad .)
    STACK_START     reduce using rule 5 (propiedades -> propiedad .)
    TAPE_ALPHABET   reduce using rule 5 (propiedades -> propiedad .)
    BLANK           reduce using rule 5 (propiedades -> propiedad .)


state 10

    (7) propiedad -> type_def .

    TRANSITIONS     reduce using rule 7 (propiedad -> type_def .)
    TYPE            reduce using rule 7 (propiedad -> type_def .)
    ALPHABET        reduce using rule 7 (propiedad -> type_def .)
    STATES          reduce using rule 7 (propiedad -> type_def .)
    INITIAL         reduce using rule 7 (propiedad -> type_def .)
    ACCEPT          reduce using rule 7 (propiedad -> type_def .)
    STACK_ALPHABET  reduce using rule 7 (propiedad -> type_def .)
    STACK_START     reduce using rule 7 (propiedad -> type_def .)
    TAPE_ALPHABET   reduce using rule 7 (propiedad -> type_def .)
    BLANK           reduce using rule 7 (propiedad -> type_def .)


state 11

    (8) propiedad -> alphabet_def .

    TRANSITIONS     reduce using rule 8 (propiedad -> alphabet_def .)
    TYPE            reduce using rule 8 (propiedad -> alphabet_def .)
    ALPHABET        reduce using rule 8 (propiedad -> alphabet_def .)
    STATES          reduce using rule 8 (propiedad -> alphabet_def .)
    INITIAL         reduce using rule 8 (propiedad -> alphabet_def .)
    ACCEPT          reduce using rule 8 (propiedad -> alphabet_def .)
    STACK_ALPHABET  reduce using rule 8 (propiedad -> alphabet_def .)
    STACK_START     reduce using rule 8 (propiedad -> alphabet_def .)
    TAPE_ALPHABET   reduce using rule 8 (propiedad -> alphabet_def .)
    BLANK           reduce using rule 8 (propiedad -> alphabet_def .)


state 12

    (9) propiedad -> states_def .

    TRANSITIONS     reduce using rule 9 (propiedad -> states_def .)
    TYPE            reduce using rule 9 (propiedad -> states_def .)
    ALPHABET        reduce using rule 9 (propiedad -> states_def .)
    STATES          reduce using rule 9 (propiedad -> states_def .)
    INITIAL         reduce using rule 9 (propiedad -> states_def .)
    ACCEPT          reduce using rule 9 (propiedad -> states_def .)
    STACK_ALPHABET  reduce using rule 9 (propiedad -> states_def .)
    STACK_START     reduce using rule 9 (propiedad -> states_def .)
    TAPE_ALPHABET   reduce using rule 9 (propiedad -> states_def .)
    BLANK           reduce using rule 9 (propiedad -> states_def .)


state 13

    (10) propiedad -> initial_def .

    TRANSITIONS     reduce using rule 10 (propiedad -> initial_def .)
    TYPE            reduce using rule 10 (propiedad -> initial_def .)
    ALPHABET        reduce using rule 10 (propiedad -> initial_def .)
    STATES          reduce using rule 10 (propiedad -> initial_def .)
    INITIAL         reduce using rule 10 (propiedad -> initial_def .)
    ACCEPT          reduce using rule 10 (propiedad -> initial_def .)
    STACK_ALPHABET  reduce using rule 10 (propiedad -> initial_def .)
    STACK_START     reduce using rule 10 (propiedad -> initial_def .)
    TAPE_ALPHABET   reduce using rule 10 (propiedad -> initial_def .)
    BLANK           reduce using rule 10 (propiedad -> initial_def .)


state 14

    (11) propiedad -> accept_def .

    TRANSITIONS     reduce using rule 11 (propiedad -> accept_def .)
    TYPE            reduce using rule 11 (propiedad -> accept_def .)
    ALPHABET        reduce using rule 11 (propiedad -> accept_def .)
    STATES          reduce using rule 11 (propiedad -> accept_def .)
    INITIAL         reduce using rule 11 (propiedad -> accept_def .)
    ACCEPT          reduce using rule 11 (propiedad -> accept_def .)
    STACK_ALPHABET  reduce using rule 11 (propiedad -> accept_def .)
    STACK_START     reduce using rule 11 (propiedad -> accept_def .)
    TAPE_ALPHABET   reduce using rule 11 (propiedad -> accept_def .)
    BLANK           reduce using rule 11 (propiedad -> accept_def .)


state 15

    (12) propiedad -> stack_alphabet_def .

    TRANSITIONS     reduce using rule 12 (propiedad -> stack_alphabet_def .)
    TYPE            reduce using rule 12 (propiedad -> stack_alphabet_def .)
    ALPHABET        reduce using rule 12 (propiedad -> stack_alphabet_def .)
    STATES          reduce using rule 12 (propiedad -> stack_alphabet_def .)
    INITIAL         reduce using rule 12 (propiedad -> stack_alphabet_def .)
    ACCEPT          reduce using rule 12 (propiedad -> stack_alphabet_def .)
    STACK_ALPHABET  reduce using rule 12 (propiedad -> stack_alphabet_def .)
    STACK_START     reduce using rule 12 (propiedad -> stack_alphabet_def .)
    TAPE_ALPHABET   reduce using rule 12 (propiedad -> stack_alphabet_def .)
    BLANK           reduce using rule 12 (propiedad -> stack_alphabet_def .)


state 16

    (13) propiedad -> stack_start_def .

    TRANSITIONS     reduce using rule 13 (propiedad -> stack_start_def .)
    TYPE            reduce using rule 13 (propiedad -> stack_start_def .)
    ALPHABET        reduce using rule 13 (propiedad -> stack_start_def .)
    STATES          reduce using rule 13 (propiedad -> stack_start_def .)
    INITIAL         reduce using rule 13 (propiedad -> stack_start_def .)
    ACCEPT          reduce using rule 13 (propiedad -> stack_start_def .)
    STACK_ALPHABET  reduce using rule 13 (propiedad -> stack_start_def .)
    STACK_START     reduce using rule 13 (propiedad -> stack_start_def .)
    TAPE_ALPHABET   reduce using rule 13 (propiedad -> stack_start_def .)
    BLANK           reduce using rule 13 (propiedad -> stack_start_def .)


state 17

    (14) propiedad -> tape_alphabet_def .

    TRANSITIONS     reduce using rule 14 (propiedad -> tape_alphabet_def .)
    TYPE            reduce using rule 14 (propiedad -> tape_alphabet_def .)
    ALPHABET        reduce using rule 14 (propiedad -> tape_alphabet_def .)
    STATES          reduce using rule 14 (propiedad -> tape_alphabet_def .)
    INITIAL         reduce using rule 14 (propiedad -> tape_alphabet_def .)
    ACCEPT          reduce using rule 14 (propiedad -> tape_alphabet_def .)
    STACK_ALPHABET  reduce using rule 14 (propiedad -> tape_alphabet_def .)
    STACK_START     reduce using rule 14 (propiedad -> tape_alphabet_def .)
    TAPE_ALPHABET   reduce using rule 14 (propiedad -> tape_alphabet_def .)
    BLANK           reduce using rule 14 (propiedad -> tape_alphabet_def .)


state 18

    (15) propiedad -> blank_def .

    TRANSITIONS     reduce using rule 15 (propiedad -> blank_def .)
    TYPE            reduce using rule 15 (propiedad -> blank_def .)
    ALPHABET        reduce using rule 15 (propiedad -> blank_def .)
    STATES          reduce using rule 15 (propiedad -> blank_def .)
    INITIAL         reduce using rule 15 (propiedad -> blank_def .)
    ACCEPT          reduce using rule 15 (propiedad -> blank_def .)
    STACK_ALPHABET  reduce using rule 15 (propiedad -> blank_def .)
    STACK_START     reduce using rule 15 (propiedad -> blank_def .)
    TAPE_ALPHABET   reduce using rule 15 (propiedad -> blank_def .)
    BLANK           reduce using rule 15 (propiedad -> blank_def .)


state 19

    (16) type_def -> TYPE . ASIGNACION tipo_automa PUNTOCOMA

    ASIGNACION      shift and go to state 32


state 20

    (21) alphabet_def -> ALPHABET . ASIGNACION conjunto_simbolos PUNTOCOMA

    ASIGNACION      shift and go to state 33


state 21

    (22) states_def -> STATES . ASIGNACION conjunto_ids PUNTOCOMA

    ASIGNACION      shift and go to state 34


state 22

    (23) initial_def -> INITIAL . ASIGNACION IDENTIFICADOR PUNTOCOMA

    ASIGNACION      shift and go to state 35


state 23

    (24) accept_def -> ACCEPT . ASIGNACION conjunto_ids PUNTOCOMA

    ASIGNACION      shift and go to state 36


state 24

    (25) stack_alphabet_def -> STACK_ALPHABET . ASIGNACION conjunto_simbolos PUNTOCOMA

    ASIGNACION      shift and go to state 37


state 25

    (26) stack_start_def -> STACK_START . ASIGNACION SIMBOLO PUNTOCOMA
    (27) stack_start_def -> STACK_START . ASIGNACION IDENTIFICADOR PUNTOCOMA

    ASIGNACION      shift and go to state 38


state 26

    (28) tape_alphabet_def -> TAPE_ALPHABET . ASIGNACION conjunto_simbolos PUNTOCOMA

    ASIGNACION      shift and go to state 39


state 27

    (29) blank_def -> BLANK . ASIGNACION SIMBOLO PUNTOCOMA
    (30) blank_def -> BLANK . ASIGNACION IDENTIFICADOR PUNTOCOMA

    ASIGNACION      shift and go to state 40


state 28

    (3) automata_def -> AUTOMATON IDENTIFICADOR LLAVE_A definicion_automa LLAVE_C .

    AUTOMATON       reduce using rule 3 (automata_def -> AUTOMATON IDENTIFICADOR LLAVE_A definicion_automa LLAVE_C .)
    $end            reduce using rule 3 (automata_def -> AUTOMATON IDENTIFICADOR LLAVE_A definicion_automa LLAVE_C .)


state 29

    (4) definicion_automa -> propiedades transiciones_def .

    LLAVE_C         reduce using rule 4 (definicion_automa -> propiedades transiciones_def .)


state 30

    (6) propiedades -> propiedades propiedad .

    TRANSITIONS     reduce using rule 6 (propiedades -> propiedades propiedad .)
    TYPE            reduce using rule 6 (propiedades -> propiedades propiedad .)
    ALPHABET        reduce using rule 6 (propiedades -> propiedades propiedad .)
    STATES          reduce using rule 6 (propiedades -> propiedades propiedad .)
    INITIAL         reduce using rule 6 (propiedades -> propiedades propiedad .)
    ACCEPT          reduce using rule 6 (propiedades -> propiedades propiedad .)
    STACK_ALPHABET  reduce using rule 6 (propiedades -> propiedades propiedad .)
    STACK_START     reduce using rule 6 (propiedades -> propiedades propiedad .)
    TAPE_ALPHABET   reduce using rule 6 (propiedades -> propiedades propiedad .)
    BLANK           reduce using rule 6 (propiedades -> propiedades propiedad .)


state 31

    (31) transiciones_def -> TRANSITIONS . LLAVE_A lista_transiciones LLAVE_C

    LLAVE_A         shift and go to state 41


state 32

    (16) type_def -> TYPE ASIGNACION . tipo_automa PUNTOCOMA
    (17) tipo_automa -> . DFA
    (18) tipo_automa -> . NFA
    (19) tipo_automa -> . PDA
    (20) tipo_automa -> . TM

    DFA             shift and go to state 43
    NFA             shift and go to state 44
    PDA             shift and go to state 45
    TM              shift and go to state 46

    tipo_automa                    shift and go to state 42

state 33

    (21) alphabet_def -> ALPHABET ASIGNACION . conjunto_simbolos PUNTOCOMA
    (50) conjunto_simbolos -> . LLAVE_A elementos_conjunto LLAVE_C

    LLAVE_A         shift and go to state 48

    conjunto_simbolos              shift and go to state 47

state 34

    (22) states_def -> STATES ASIGNACION . conjunto_ids PUNTOCOMA
    (51) conjunto_ids -> . LLAVE_A elementos_conjunto LLAVE_C

    LLAVE_A         shift and go to state 50

    conjunto_ids                   shift and go to state 49

state 35

    (23) initial_def -> INITIAL ASIGNACION . IDENTIFICADOR PUNTOCOMA

    IDENTIFICADOR   shift and go to state 51


state 36

    (24) accept_def -> ACCEPT ASIGNACION . conjunto_ids PUNTOCOMA
    (51) conjunto_ids -> . LLAVE_A elementos_conjunto LLAVE_C

    LLAVE_A         shift and go to state 50

    conjunto_ids                   shift and go to state 52

state 37

    (25) stack_alphabet_def -> STACK_ALPHABET ASIGNACION . conjunto_simbolos PUNTOCOMA
    (50) conjunto_simbolos -> . LLAVE_A elementos_conjunto LLAVE_C

    LLAVE_A         shift and go to state 48

    conjunto_simbolos              shift and go to state 53

state 38

    (26) stack_start_def -> STACK_START ASIGNACION . SIMBOLO PUNTOCOMA
    (27) stack_start_def -> STACK_START ASIGNACION . IDENTIFICADOR PUNTOCOMA

    SIMBOLO         shift and go to state 54
    IDENTIFICADOR   shift and go to state 55
